# criptovidente

./: .flake8  .gitignore  README.md  app.py  pyproject.toml
bots/bitsurfer/bitsurfer/: animation.py  bitsurfer.py  decisions.py  orders.py  predictions.py  streams.py  wallet.py
bots/pythia/: pyproject.toml
bots/pythia/pythia/: predictions.py  pythia.py  reports.py  slack_test.py  streams.py  wallet.py
bots/rookie/: pyproject.toml
bots/rookie/rookie/: rookie.py
bots/test-bot/: pyproject.toml
bots/test-bot/test_bot/: binance_data_gather.py  bnn_data_analysis.py  test_bot.py  test_perceptron.py
clients/binance-client/: pyproject.toml
clients/binance-client/binance_client/: client.py  coins.py  constants.py  endpoints.py  signatures.py  stream.py  symbols.py  test.py
clients/binance-client/tests/: test_api.py
clients/bitfinex-client/: pyproject.toml
clients/bitfinex-client/bitfinex_client/: constants.py  rest_client.py  symbols.py  utils.py
clients/client-utils/: pyproject.toml
clients/client-utils/client_utils/: client.py  request_utils.py  signature_utils.py
crypto-predictors/: pyproject.toml
crypto-predictors/crypto_predictors/: sgd.py
data-fetcher/: main.py  pyproject.toml
gatherers/bitfinex/: pyproject.toml
gatherers/bitfinex/bitfinex/: bitfinex.py
notebooks/bitfinex-analysis/: bitfinex_analysis.ipynb  workers.py
notebooks/bnn_data_analysis/: bnn_data_analysis.ipynb  workers.py
predictors/numeric-predictors/: pyproject.toml
predictors/numeric-predictors/numeric_predictors/: predictions.py
predictors/playground/: get_bitcoin_price.py
predictors/pretweettor/: pyproject.toml
predictors/pretweettor/pretweettor/: clean_tweets.py  preprocess_tweets.py  sentiment_analysis.py
