[tool.poetry]
name = "criptovidente"
version = "0.1.0"
description = ""
authors = ["Daniel Lavin <dlavinv64@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
data-fetcher = {path = "./data-fetcher", develop = false}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
