[tool.poetry]
name = "crypto-predictors"
version = "0.1.0"
description = ""
authors = ["Daniel Lavin <dlavinv64@hotmail.com>"]
packages = [
    { include = "crypto_predictors" },
    { include = "crypto_predictors/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
sklearn = "^0.0"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
