[tool.poetry]
name = "test-bot"
version = "0.1.0"
description = ""
authors = ["Daniel Lavin <dlavinv64@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
binance-client = {path = "../../clients/binance-client/"}
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
