[tool.poetry]
name = "bitfinex-client"
version = "0.1.0"
description = ""
authors = ["Daniel Lavin <dlavinv64@hotmail.com>"]
packages = [
    { include = "bitfinex_client" },
    { include = "bitfinex_client/**/*.py" },
    { include = "bitfinex_client/*.py" },
]


[tool.poetry.dependencies]
python = "^3.8"
client-utils = {path = "/Users/daniel/Developer/criptovidente/clients/client-utils/", develop=false}
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
