[tool.poetry]
name = "client-utils"
version = "0.1.0"
description = ""
authors = ["Daniel Lavin <dlavinv64@hotmail.com>"]

packages = [
    { include = "client_utils" },
    { include = "client_utils/**/*.py" },
    { include = "client_utils/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
