[tool.poetry]
name = "numeric-predictions"
version = "0.1.0"
description = ""
authors = ["Daniel Lavin <dlavinv64@hotmail.com>"]
packages = [
    { include = "numeric_predictors" },
    { include = "numeric_predictors/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
sklearn = "^0.0"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
