[tool.poetry]
name = "pretweettor"
version = "0.1.0"
description = ""
authors = ["Daniel Lavin <dlavinv64@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
vaderSentiment = "^3.3.2"
langdetect = "^1.0.8"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
